fix: fix text overflow

--- a/packages/components/src/components/Alert/ecma-version-check.module.scss
+++ b/packages/components/src/components/Alert/ecma-version-check.module.scss
@@ -5,6 +5,11 @@
   padding: 10px 20px;
   font-family: var(--font-family-code);
 
+  .box {
+    max-width: 300px;
+    display: flex;
+  }
+
   .title {
     font-size: 12px;
     font-weight: 400;
